[package]
name = "anchor-spl"
version = "0.25.0"
authors = ["Serum Foundation <foundation@projectserum.com>"]
rust-version = "1.59"
edition = "2021"
license = "Apache-2.0"
description = "CPI clients for SPL programs"

[features]
default = ["mint", "token", "associated_token"]
mint = []
token = ["spl-token"]
associated_token = ["spl-associated-token-account"]
governance = []
shmem = []
stake = ["borsh"]
devnet = []
metadata = ["mpl-token-metadata"]
dex = ["openbook_dex"]

[dependencies]
anchor-lang = { path = "../lang", version = "0.25.0", features = ["derive"] }
borsh = { version = "^0.9", optional = true }
openbook_dex = { version = "0.5.6", features = ["no-entrypoint"], optional = true }
solana-program = "1.13.4"
spl-token = { version = "3.5.0", features = ["no-entrypoint"], optional = true }
spl-associated-token-account = { version = "1.1.1", features = ["no-entrypoint"], optional = true }
mpl-token-metadata = { version = "1.4.3", optional = true, features = ["no-entrypoint"] }
